parser.output
Grammar

    0 $accept: Program $end

    1 Program: Program Linija '\n'
    2        | Linija '\n'

    3 Linija: num_token ':' id_token ':' '=' E
    4       | num_token ':' id_token '[' id_token ']' ':' '=' E
    5       | num_token ':' if_token E goto_token '(' num_token ')'

    6 E: E '+' E
    7  | E '-' E
    8  | E '*' E
    9  | E '<' '=' E
   10  | id_token
   11  | num_token


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1 2
'(' (40) 5
')' (41) 5
'*' (42) 8
'+' (43) 6
'-' (45) 7
':' (58) 3 4 5
'<' (60) 9
'=' (61) 3 4 9
'[' (91) 4
']' (93) 4
error (256)
num_token (258) 3 4 5 11
id_token (259) 3 4 10
goto_token (260) 5
if_token (261) 5


Nonterminals, with rules where they appear

$accept (18)
    on left: 0
Program (19)
    on left: 1 2, on right: 0 1
Linija (20)
    on left: 3 4 5, on right: 1 2
E (21)
    on left: 6 7 8 9 10 11, on right: 3 4 5 6 7 8 9


State 0

    0 $accept: . Program $end

    num_token  shift, and go to state 1

    Program  go to state 2
    Linija   go to state 3


State 1

    3 Linija: num_token . ':' id_token ':' '=' E
    4       | num_token . ':' id_token '[' id_token ']' ':' '=' E
    5       | num_token . ':' if_token E goto_token '(' num_token ')'

    ':'  shift, and go to state 4


State 2

    0 $accept: Program . $end
    1 Program: Program . Linija '\n'

    $end       shift, and go to state 5
    num_token  shift, and go to state 1

    Linija  go to state 6


State 3

    2 Program: Linija . '\n'

    '\n'  shift, and go to state 7


State 4

    3 Linija: num_token ':' . id_token ':' '=' E
    4       | num_token ':' . id_token '[' id_token ']' ':' '=' E
    5       | num_token ':' . if_token E goto_token '(' num_token ')'

    id_token  shift, and go to state 8
    if_token  shift, and go to state 9


State 5

    0 $accept: Program $end .

    $default  accept


State 6

    1 Program: Program Linija . '\n'

    '\n'  shift, and go to state 10


State 7

    2 Program: Linija '\n' .

    $default  reduce using rule 2 (Program)


State 8

    3 Linija: num_token ':' id_token . ':' '=' E
    4       | num_token ':' id_token . '[' id_token ']' ':' '=' E

    ':'  shift, and go to state 11
    '['  shift, and go to state 12


State 9

    5 Linija: num_token ':' if_token . E goto_token '(' num_token ')'

    num_token  shift, and go to state 13
    id_token   shift, and go to state 14

    E  go to state 15


State 10

    1 Program: Program Linija '\n' .

    $default  reduce using rule 1 (Program)


State 11

    3 Linija: num_token ':' id_token ':' . '=' E

    '='  shift, and go to state 16


State 12

    4 Linija: num_token ':' id_token '[' . id_token ']' ':' '=' E

    id_token  shift, and go to state 17


State 13

   11 E: num_token .

    $default  reduce using rule 11 (E)


State 14

   10 E: id_token .

    $default  reduce using rule 10 (E)


State 15

    5 Linija: num_token ':' if_token E . goto_token '(' num_token ')'
    6 E: E . '+' E
    7  | E . '-' E
    8  | E . '*' E
    9  | E . '<' '=' E

    goto_token  shift, and go to state 18
    '<'         shift, and go to state 19
    '+'         shift, and go to state 20
    '-'         shift, and go to state 21
    '*'         shift, and go to state 22


State 16

    3 Linija: num_token ':' id_token ':' '=' . E

    num_token  shift, and go to state 13
    id_token   shift, and go to state 14

    E  go to state 23


State 17

    4 Linija: num_token ':' id_token '[' id_token . ']' ':' '=' E

    ']'  shift, and go to state 24


State 18

    5 Linija: num_token ':' if_token E goto_token . '(' num_token ')'

    '('  shift, and go to state 25


State 19

    9 E: E '<' . '=' E

    '='  shift, and go to state 26


State 20

    6 E: E '+' . E

    num_token  shift, and go to state 13
    id_token   shift, and go to state 14

    E  go to state 27


State 21

    7 E: E '-' . E

    num_token  shift, and go to state 13
    id_token   shift, and go to state 14

    E  go to state 28


State 22

    8 E: E '*' . E

    num_token  shift, and go to state 13
    id_token   shift, and go to state 14

    E  go to state 29


State 23

    3 Linija: num_token ':' id_token ':' '=' E .
    6 E: E . '+' E
    7  | E . '-' E
    8  | E . '*' E
    9  | E . '<' '=' E

    '<'  shift, and go to state 19
    '+'  shift, and go to state 20
    '-'  shift, and go to state 21
    '*'  shift, and go to state 22

    $default  reduce using rule 3 (Linija)


State 24

    4 Linija: num_token ':' id_token '[' id_token ']' . ':' '=' E

    ':'  shift, and go to state 30


State 25

    5 Linija: num_token ':' if_token E goto_token '(' . num_token ')'

    num_token  shift, and go to state 31


State 26

    9 E: E '<' '=' . E

    num_token  shift, and go to state 13
    id_token   shift, and go to state 14

    E  go to state 32


State 27

    6 E: E . '+' E
    6  | E '+' E .
    7  | E . '-' E
    8  | E . '*' E
    9  | E . '<' '=' E

    '*'  shift, and go to state 22

    $default  reduce using rule 6 (E)


State 28

    6 E: E . '+' E
    7  | E . '-' E
    7  | E '-' E .
    8  | E . '*' E
    9  | E . '<' '=' E

    '*'  shift, and go to state 22

    $default  reduce using rule 7 (E)


State 29

    6 E: E . '+' E
    7  | E . '-' E
    8  | E . '*' E
    8  | E '*' E .
    9  | E . '<' '=' E

    $default  reduce using rule 8 (E)


State 30

    4 Linija: num_token ':' id_token '[' id_token ']' ':' . '=' E

    '='  shift, and go to state 33


State 31

    5 Linija: num_token ':' if_token E goto_token '(' num_token . ')'

    ')'  shift, and go to state 34


State 32

    6 E: E . '+' E
    7  | E . '-' E
    8  | E . '*' E
    9  | E . '<' '=' E
    9  | E '<' '=' E .

    '+'  shift, and go to state 20
    '-'  shift, and go to state 21
    '*'  shift, and go to state 22

    $default  reduce using rule 9 (E)


State 33

    4 Linija: num_token ':' id_token '[' id_token ']' ':' '=' . E

    num_token  shift, and go to state 13
    id_token   shift, and go to state 14

    E  go to state 35


State 34

    5 Linija: num_token ':' if_token E goto_token '(' num_token ')' .

    $default  reduce using rule 5 (Linija)


State 35

    4 Linija: num_token ':' id_token '[' id_token ']' ':' '=' E .
    6 E: E . '+' E
    7  | E . '-' E
    8  | E . '*' E
    9  | E . '<' '=' E

    '<'  shift, and go to state 19
    '+'  shift, and go to state 20
    '-'  shift, and go to state 21
    '*'  shift, and go to state 22

    $default  reduce using rule 4 (Linija)
